# ops_test_case

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  management.graphql  ops.graphql  pyproject.toml  router.yaml  test_cases_sjoerd.graphql
alembic/: env.py
alembic/versions/: 47aacf49a51e_init.py  68e0a0d1cdb6_initial_db_scheme.py  b34022b4b685_added_default_states_to_created_at_and_.py
core_wms/app/: main.py
core_wms/app/config/: settings.py
core_wms/app/graphql/: app.py  context.py  schema.py
core_wms/app/graphql/extensions/: __init__.py
core_wms/app/services/aisle/: main.py
core_wms/app/services/batch/: main.py
core_wms/app/services/bin_position/: main.py
core_wms/app/services/carrier/: main.py
core_wms/app/services/channel/: main.py
core_wms/app/services/customer/: address.py  main.py
core_wms/app/services/fulfillment_event/: main.py
core_wms/app/services/fulfillment_line_item/: main.py
core_wms/app/services/fulfillment_order/: line_item.py  main.py
core_wms/app/services/fulfillment_service/: main.py
core_wms/app/services/inventory_adjustment/: main.py
core_wms/app/services/inventory_item/: main.py
core_wms/app/services/inventory_level/: main.py
core_wms/app/sqlalchemy/: session.py
core_wms/app/tasks/: __init__.py  broker.py  registry.py
core_wms/app/utils/: validation.py
ops/app/: main.py
ops/app/core/: db.py  settings.py
ops/app/services/: base.py
ops/app/utils/: validation.py
workers/: consumer.py  subscriber.py
(+247 files in other folders)
